# opossum

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  NE03B.csv  README.md  build.rs  cliff.toml  dist-workspace.toml  package-lock.json  package.json
opossum/: .gitignore  Cargo.toml  LICENSE  build.rs  test
opossum/benches/: fluence_estimator.rs  kde.rs
opossum/examples/: apodization.rs  arc.rs  beam_combine_test.rs  cylindric_lens_test.rs  debug_testing.rs  empty_opm_file.rs  energy_distribution.rs  energymeter_test.rs  filter_test.rs  fluence_helper_test.rs  fluence_test.rs  folded_telescope.rs  fresnel_coating.rs  ghost_focus.rs  graph_port_test.rs  group_reverse.rs  group_test.rs  hhts.rs  image_field.rs  inverse_beam_splitter_test.rs  kde.rs  kepler.rs  laser_system.rs  lens_inverse.rs  lens_test.rs  michaelson.rs  mirror.rs  mirror_inverse.rs  nalgebra_matrix_testing.rs  off_center_position_distribution.rs  optic_display.rs  optics_volume_display.rs  opticscenery.rs  opticsref.rs  pa_doublepass_graph.rs  parabolic_mirror.rs  parabolic_mirror_ghost_focus.rs  paraxial_lens_correction.rs  paraxial_lens_wavefront.rs  plot_testing.rs  (+44 more)
opossum/examples/grating_examples/: detector_group.rs  folded_martinez.rs  folded_martinez_longer_f.rs  folded_martinez_paraxial_lens.rs  grating_examples.rs  martinez_stretcher_folded.rs  stretcher_telescope.rs  treacy_compressor.rs
opossum/examples/hhts/: FELH1000_Transmission.csv  FESH0700_Transmission.csv  HBSYx2_Reflectivity_45deg_unpol.csv  HHTS_T1_PM_Transmission.csv  HHTS_W1_Transmission.csv  MM15_Transmission.csv  cambox_1w.rs  cambox_2w.rs  hhts.rs  hhts_input.rs
opossum/files_for_testing/CLI/: opticscenery.opm
opossum/files_for_testing/dot/: create_dot_file_test.dot  group_dot_LR.dot  group_dot_TB.dot  scenery.dot  to_dot_empty_LR.dot  to_dot_empty_TB.dot  to_dot_full_LR.dot  to_dot_full_LR.txt  to_dot_full_TB.dot  to_dot_group_node_expand_LR.txt  to_dot_single_node_inverted_LR.txt  to_dot_w_node_LR.dot  to_dot_w_node_TB.dot
opossum/files_for_testing/opm/: filter_test.dot  filter_test.opm  optic_ref.opm  opticscenery.opm
opossum/files_for_testing/report/: create_report_file_test.json
opossum/files_for_testing/spectrum/: NE03B.csv  test_filter.csv
opossum/logo/: console_intro.txt
opossum/opm_macros_lib/: Cargo.toml
opossum/opm_macros_lib/src/: lib.rs
opossum/src/: analyzable.rs  analyzer.rs  aperture.rs  bevy_main.rs  bevy_scene.rs  console.rs  distribution.rs  dottable.rs  error.rs  lib.rs  light.rs  light_flow.rs  light_result.rs  lightdata.rs  main.rs  opm_document.rs  optic_graph.rs  optic_node.rs  optic_port.rs  optic_ports.rs  optic_ref.rs  optic_scenery.rs  optic_scenery_rsc.rs  optic_senery_rsc.rs  optic_surface.rs  optical.rs  plottable.rs  port_map.rs  properties.rs  ray.rs  rays.rs  reporter.rs  scenery_bevy_data.rs  signed_distance_function.rs  spectrum.rs  spectrum_helper.rs  surface.rs  typedefs.rs
opossum/src/analyzers/: analyzable.rs  energy.rs  ghostfocus.rs  mod.rs  raytrace.rs
opossum/src/coatings/: constant_r.rs  fresnel.rs  ideal_ar.rs  mod.rs
opossum/src/distributions/: distribution.rs  fibonacci.rs  grid.rs  hexapolar.rs  mod.rs  random.rs  sobol.rs
opossum/src/energy_distributions/: general_gaussian.rs  mod.rs  uniform.rs
opossum/src/fluence_distributions/: general_gaussian.rs  mod.rs
opossum/src/html/: diagram.html  html_report.html  node_report.html  prop_image.html  prop_simple.html
opossum/src/kde/: gaussian.rs  mod.rs
opossum/src/lightdata/: energy_data_builder.rs  energy_spectrum_builder.rs  light_data_builder.rs  mod.rs  ray_data_builder.rs
opossum/src/nodes/: beam_splitter.rs  cylindric_lens.rs  detector.rs  dummy.rs  energy_meter.rs  fluence_detector.rs  group.rs  ideal_filter.rs  lens.rs  mod.rs  node_attr.rs  parabolic_mirror.rs  paraxial_surface.rs  propagation.rs  ray_propagation_detector.rs  ray_propagation_visualizer.rs  reference.rs  reflective_grating.rs  source.rs  source_helper.rs  spectrometer.rs  spot_diagram.rs  test_helper.rs  thin_mirror.rs  wavefront.rs  wedge.rs
opossum/src/physical_optic_component/: mod.rs  sdf.rs
opossum/src/plottable/: ax_lims.rs  mod.rs
opossum/src/position_distributions/: fibonacci.rs  grid.rs  hexagonal_tiling.rs  hexapolar.rs  mod.rs  random.rs  sobol.rs
opossum/src/properties/: mod.rs  property.rs  proptype.rs  validator.rs  validators.rs
opossum/src/refractive_index/: mod.rs  refr_index_conrady.rs  refr_index_const.rs  refr_index_schott.rs  refr_index_sellmeier1.rs
opossum/src/render/: mod.rs  sdf.rs
opossum/src/reporting/: analysis_report.rs  html_report.rs  mod.rs  node_report.rs  reporter.rs
opossum/src/spectral_distribution/: gaussian.rs  laser_lines.rs  mod.rs
opossum/src/surface/: cuboid.rs  cylinder.rs  geo_surface.rs  hit_map.rs  mod.rs  old_cylinder.rs  optic_surface.rs  optical_surface.rs  optical_table.rs  parabola.rs  paraxial.rs  plane.rs  sphere.rs
opossum/src/utils/: enum_proxy.rs  filter_data.rs  geom_transformation.rs  griddata.rs  math_distribution_functions.rs  math_utils.rs  mod.rs  test_helper.rs  unit_format.rs  uom_macros.rs
opossum/wix/: main.wxs
opossum_backend/: Cargo.toml
opossum_backend/src/: app_state.rs  error.rs  general.rs  lib.rs  main.rs  nodes.rs  pages.rs  routes.rs  scenery.rs  server.rs  utils.rs
opossum_backend/wix/: main.wxs
opossum_gui/: Cargo.toml  Dioxus.toml  index.html
opossum_gui/assets/: main.css  mdb_accordion.css  mdb_submenu.css  orbitControls.js  three_mod.js
opossum_gui/src/: demo_node.rs  demo_viewer.rs  editor_node.rs  gui_app.rs  lib.rs  main.rs  opm_model_viewer.rs  router.rs
opossum_gui/src/api/: api_client.rs  error.rs  general.rs  http_client.rs  mod.rs  node.rs  scenery.rs
opossum_gui/src/components/: app.rs  file_callbacks.rs  mod.rs  page_not_found.rs
opossum_gui/src/opm_types/: analyzer_type.rs  connect_info.rs  error_response.rs  mod.rs  new_analyzer_info.rs  (+5 more)
opossum_gui/wix/: app.wxs
yew-gui/: Cargo.toml  index.html  invoke.js  styles.css
yew-gui/src/: bindings.rs  lib.rs  main.rs  node.rs
(+386 files in other folders)
