[workspace]
members = [ "opossum","xtask" , "yew-gui", "src-tauri", "leptos_ui"]
default-members = ["opossum"]
resolver = "2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true

[profile.release]
# strip = true

# Disable debug symbols an link time optimization due to limitations of the Linux pipeline VM.
[profile.test]
debug = 0
lto = "off"
