[workspace]
members = [ "opossum", "xtask", "opossum_backend", "opossum_gui" ]
default-members = ["opossum", "opossum_backend", "opossum_gui"]
resolver = "2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true

[profile.release]
# strip = true

# Disable debug symbols an link time optimization due to limitations of the Linux pipeline VM.
[profile.test]
debug = 0
lto = "off"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
