[package]
name = "opossum"
version = "0.3.0"
edition = "2021"
authors = [
  "Udo Eisenbarth <u.eisenbarth@gsi.de>",
  "Yannik Zobus <y.zobus@gsi.de>",
]
description = "Open-source Optics Simulation Software and Unified Modeler"
repository = "https://git.gsi.de/phelix/rust/opossum/"
license = "GPL-3.0"
keywords = ["laser", "optics", "physics", "simulation"]
categories = ["science", "simulation"]
publish = true
build = "build.rs"
readme = "README.md"

[package.metadata.wix]
upgrade-guid = "6A79F3B1-0417-472C-8C99-F1ADB17DE27D"
path-guid = "56710F06-5772-4D76-BA9F-83122E49A2C3"
license = false
eula = false
timestamp = "Versign"
product-icon = "opossum/logo/Logo_square.ico"
banner = "opossum/logo/Logo_InstallBanner.png"
dialog = "opossum/logo/Logo_InstallDialog.png"

[dependencies]
petgraph = { version = "0", features = ["serde-1"] } # the graph library
uom = {version="0", features = ["serde"] }
serde = { version = "1" }
serde_derive = "1"
serde_yaml = "0"
serde_json = "1"

csv = "1"
plotters = "0"

approx = "0" # assert macros for comparison of floats with tolerance
clap = { version = "4", features = ["derive", "string"] } # command line argument parser
rprompt = "2.0"
strum = { version = "0", features = ["derive"] }

uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }

chrono = { version= "0", features = ["serde"] }

embed-doc-image = "0" # allows for embedded images in the rust API doc

itertools-num="0"

genpdf={ version="0", features = ["images"] }
image="0.23"
tempfile="3"
rand="0"
sobol="1"
itertools = "0.12.0"
accurate = "0.3.1"
nalgebra = "0.30"
ncollide2d = { version = "0.33.0", features = ["serde-serialize"] }
[features]
doc-images = []

[dev-dependencies]
regex = "1"
assert_matches = "1"

[build-dependencies]
# All features enabled
vergen = { version = "8", features = [
  "git",
  "gitcl",
] } # get git version infos compiled in binary
