[package]
name = "opossum"
version = "0.5.0"
edition = "2021"
authors = [
  "Udo Eisenbarth <u.eisenbarth@gsi.de>",
  "Yannik Zobus <y.zobus@gsi.de>",
]
description = "Open-source Optics Simulation Software and Unified Modeler"
repository = "https://git.gsi.de/phelix/rust/opossum/"
license = "GPL-3.0"
keywords = ["laser", "optics", "physics", "simulation"]
categories = ["science", "simulation"]
publish = true
build = "build.rs"
readme = "../README.md"

[package.metadata.wix]
upgrade-guid = "6A79F3B1-0417-472C-8C99-F1ADB17DE27D"
path-guid = "56710F06-5772-4D76-BA9F-83122E49A2C3"
license = false
eula = false
timestamp = "Versign"
product-icon = "opossum/logo/Logo_square.ico"
banner = "opossum/logo/Logo_InstallBanner.png"
dialog = "opossum/logo/Logo_InstallDialog.png"

[dependencies]
petgraph = { version = "0.6", features = ["serde-1"] } # the graph library
uom = {version="0.36", features = ["serde"] }
serde = { version = "1", features = ['rc'] }
serde_yaml = "0.9"

csv = "1"
plotters = "0.3"

approx = "0.5" # assert macros for comparison of floats with tolerance
clap = { version = "4", features = ["derive", "string"] } # command line argument parser
rprompt = "2.0"
strum = { version = "0.26", features = ["derive"] }

uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }

chrono = { version= "0.4", features = ["serde"] }

embed-doc-image = "0.1" # allows for embedded images in the rust API doc

image="0.25"
tempfile="3"
rand="0.8"
sobol="1"
itertools = "0.13"
nalgebra = {version = "0.33", features = ["serde-serialize"]}
colorous = "1"
strum_macros = "0.26"
delaunator = "1"
num = "0.4"
kahan = "0.1"
log = "0.4"
env_logger= "0.11"
roots = "0.0"
voronator = "0.2"
# fast-surface-nets = "0.2.0"
rayon = "1.10"

tinytemplate = "1"

bevy={ version="0.14", optional=true }
bevy_flycam = { version= "0.14", optional =true }
triangulate = "0.2"
spade = "2.12"

[lints.rust]
# missing_docs = "warn"

[features]
doc-images = []
bevy = ["dep:bevy", "dep:bevy_flycam"]

[dev-dependencies]
regex = "1"
assert_matches = "1"
testing_logger= "0.1"

[build-dependencies]
vergen-git2 = { version = "1" } # get git version infos compiled in binary

[[example]]
name = "hhts"
path = "examples/hhts/hhts.rs"

[[example]]
name = "grating_examples"
path = "examples/grating_examples/grating_examples.rs"
