[package]
name = "opossum_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
opossum = { path = "../opossum" }
actix-web = "4"
actix-cors = "0.7.0"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
uom = {version="0.36", features = ["serde"] }
utoipa = {version ="5.3.1", features = ["actix_extras", "uuid"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version ="9.0.0", features = ["actix-web", "vendored"] }
