[package]
name = "opossum_gui"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80"
publish = false


[dependencies]
eframe = { workspace = true, features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { workspace = true, features = ["default", "image"] }

egui-snarl = "0.6"
egui-modal="0.6"
egui-file-dialog = "0.8.0"

log = "0.4"
env_logger= "0.11"
serde = "1.0"
serde_derive= "1.0"