[package]
name = "opossum_gui"
version = "0.1.0"
authors = ["Udo Eisenbarth <u.eisenbarth@gsi.de>", "Yannik Zobus <y.zobus@gsi.de>"]
edition = "2021"

[dependencies]
opossum_backend = {path = "../opossum_backend"}
dioxus = { version = "0.6", features = ["html"] }
dioxus-free-icons = { version = "0.9", features = ["font-awesome-solid"] }
uuid = { version = "1.10", features = ["v4", "serde", "js"] }
# wasm-bindgen = "0.2"
# web-sys = {version="0.3.77", features = ["Window", "Document", "Element"]}
# wasm-bindgen-futures = "0.4.50"
# dioxus-logger = "0.6.2"
# serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
# futures = "0.3.31"
rfd = "0.15.3"
reqwest = { version = "0.12.14", features = ["json"] }
# async-trait = "0.1.88"
chrono = "0.4.40"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
plotly = { version = "0.12", features = ["kaleido"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
plotly = { version = "0.12", features = ["wasm"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[lib]
crate-type = ["cdylib", "rlib"]
