[package]
name = "yew-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = { version = "0.3", features = ["DragEvent", "DataTransfer", "DomRect", "Element", "MouseEvent"] }
opossum = { path = "../opossum"}
