[package]
name = "yew-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = { version = "0.3", features = ["DragEvent", "DataTransfer", "DomRect", "Element", "MouseEvent", "CustomEvent"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-console = "0.3"
gloo-utils = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
log = "0.4"
console_log = "1"
regex = "1.11"
serde-wasm-bindgen = "0.6.5"

